@@ -38,6 +38,7 @@ tower-http = { version = "0.5", features = ["cors", "trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dirs = "5.0"
+humantime = "2.1"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
