@@ -1,6 +1,9 @@
 pipewire-api (1.0.5-1) stable; urgency=medium
 
   * Renamed pw-link to link-nodes to avoid conflict with PipeWire's native pw-link tool
+  * Added /api/v1/links/status endpoint for monitoring link rule execution
+  * Link scheduler now tracks rule execution status (last run time, success/failure counts)
+  * Enhanced automatic link management with detailed status reporting
 
  -- HiFiBerry <info@hifiberry.com>  Fri, 31 Jan 2026 14:00:00 +0100
 
